src/components/scrollUp/styles.scss
@import '../../variables';
@import '../../placeholders';
@import '../../mixins';

.scroll-up-btn {
  position: fixed;
  bottom: 3 * $containerPadding;
  right: $containerPadding;
  background-color: $buttonSecondary;
  border: 0;
  width: 40px;
  height: 40px;
  border-radius: 4px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  display: none;
  z-index: 80;

  &:hover,
  &:active {
    background-color: darken($buttonSecondary, 5);
  }
  @include respond-to(lg) {
    display: block;
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
    &.visible {
      opacity: 1;
    }
  }
}

